@@ -1,8 +1,4 @@
-(* TEST
-   flags = "-g"
-   * native
-*)
-
+(* TEST_BELOW *)
 
 let l1 : unit lazy_t = lazy (raise Not_found)
 
@@ -25,3 +21,15 @@ let () =
   Printexc.record_backtrace true;
   run test1;
   run test2
+
+
+(* TEST
+
+flags = "-g"
+* no-flambda
+** native
+* flambda
+reference = "${test_source_directory}/lazy.flambda.reference"
+** native
+
+*)
